[package]
name = "bevy-test"
version = "0.1.0"
authors = ["Cory Forsstrom <cforsstrom18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
atrac3p-decoder = "0.1.2"
bevy = { git="https://github.com/tarkah/bevy", rev="audio/custom-rodio-source" }